--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="Uladzimir Yeudakimovich">
   <title>LearnApp</title>
-  <base href="https://uladzimir-yeudakimovich.github.io/learn-app/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="dist/learn-app/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script src="dist/learn-app/runtime-es2015.js" type="module"></script>
-  <script src="dist/learn-app/runtime-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/polyfills-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/polyfills-es2015.js" type="module"></script>
-  <script src="dist/learn-app/styles-es2015.js" type="module"></script>
-  <script src="dist/learn-app/styles-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/vendor-es2015.js" type="module"></script>
-  <script src="dist/learn-app/vendor-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/main-es2015.js" type="module"></script>
-  <script src="dist/learn-app/main-es5.js" nomodule defer></script>
 </body>
 </html>
