Cleaning Up and diploy

--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
   <title>LearnApp</title>
   <base href="https://uladzimir-yeudakimovich.github.io/learn-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="dist/learn-app/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="dist/learn-app/favicon.ico.ico">
+  <link rel="stylesheet" href="dist/learn-app/styles.ee7f86155a23b3d8077a.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script src="dist/learn-app/runtime-es2015.js" type="module"></script>
-  <script src="dist/learn-app/runtime-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/polyfills-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/polyfills-es2015.js" type="module"></script>
-  <script src="dist/learn-app/styles-es2015.js" type="module"></script>
-  <script src="dist/learn-app/styles-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/vendor-es2015.js" type="module"></script>
-  <script src="dist/learn-app/vendor-es5.js" nomodule defer></script>
-  <script src="dist/learn-app/main-es2015.js" type="module"></script>
-  <script src="dist/learn-app/main-es5.js" nomodule defer></script>
+  <script src="dist/learn-app/runtime-es2015.b9a0123c66511d479cce.js" type="module"></script>
+  <script src="dist/learn-app/runtime-es5.b9a0123c66511d479cce.js" nomodule defer></script>
+  <script src="dist/learn-app/polyfills-es5.8e50a9832860f7cf804a.js" nomodule defer></script>
+  <script src="dist/learn-app/polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script>
+  <script src="dist/learn-app/main-es2015.295f669dd089e95e0a8c.js" type="module"></script>
+  <script src="dist/learn-app/main-es5.295f669dd089e95e0a8c.js" nomodule defer></script>
 </body>
 </html>
