--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <base href="https://uladzimir-yeudakimovich.github.io/learn-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="dist/browser/favicon.ico">
-  <link rel="stylesheet" href="styles.ee7f86155a23b3d8077a.css">
+  <link rel="stylesheet" href="dist/browser/styles.ee7f86155a23b3d8077a.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
