--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <title>LearnApp</title>
   <base href="https://uladzimir-yeudakimovich.github.io/learn-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="dist/browser/favicon.ico">
-  <link rel="stylesheet" href="dist/browser/styles.ee7f86155a23b3d8077a.css">
+  <link rel="icon" type="image/x-icon" href="./dist/browser/favicon.ico">
+  <link rel="stylesheet" href="./dist/browser/styles.27d33cf757a4d48055c0.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script src="dist/browser/runtime-es2015.a8c184229ba07cb56efc.js" type="module"></script>
-  <script src="dist/browser/runtime-es5.a8c184229ba07cb56efc.js" nomodule defer></script>
-  <script src="dist/browser/polyfills-es5.8e50a9832860f7cf804a.js" nomodule defer></script>
-  <script src="dist/browser/polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script>
-  <script src="dist/browser/main-es2015.796be782dcebc7404c07.js" type="module"></script>
-  <script src="dist/browser/main-es5.796be782dcebc7404c07.js" nomodule defer></script>
+  <script src="./dist/browser/runtime-es2015.7b8543609d30c0653c56.js" type="module"></script>
+  <script src="./dist/browser/runtime-es5.7b8543609d30c0653c56.js" nomodule defer></script>
+  <script src="./dist/browser/polyfills-es5.fbf249247bb2c06b6ab3.js" nomodule defer></script>
+  <script src="./dist/browser/polyfills-es2015.3fd94ed6a324eee92aec.js" type="module"></script>
+  <script src="./dist/browser/main-es2015.eb1bdd631ccebee51d5b.js" type="module"></script>
+  <script src="./dist/browser/main-es5.eb1bdd631ccebee51d5b.js" nomodule defer></script>
 </body>
 </html>
