all work correctly

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>LearnApp</title>
   <base href="https://uladzimir-yeudakimovich.github.io/learn-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="dist/learn-app/browser/styles.27d33cf757a4d48055c0.css"></head>
+  <link rel="icon" type="image/x-icon" href="dist/learn-app/browser/favicon.ico">
+  <link rel="stylesheet" href="dist/learn-app/browser/styles.27d33cf757a4d48055c0.css">
+</head>
 <body>
   <app-root>Loading...</app-root>
   <script src="dist/learn-app/browser/runtime-es2015.7b8543609d30c0653c56.js" type="module"></script>
