--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Uladzimir Yeudakimovich">
-  <title>LearnApp</title>
+  <title>recipe-book</title>
   <base href="https://uladzimir-yeudakimovich.github.io/recipe-book/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="dist/recipe-book/browser/favicon.ico">
